Migrate from Guice to Spring Framework